Organized other files into images, text, and soon music